add a button to the index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
               <label for="new-last-name">Last Name</label>
               <input type="text" class="form-control" id="new-last-name" />
             </div>
+
+            <button type="submit" class="btn">Add</button>
           </form>
             <h2>Contacts:</h2>
             <ul id="contacts">
