--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
@@ -26,20 +28,20 @@
               <input type="text" class="form-control" id="new-last-name" />
             </div>
 
-            <button type="submit" class="btn">Add</button>
+            <button type="submit" class="btn btn-success btn-lg">Add</button>
           </form>
-            <h2>Contacts:</h2>
-            <ul id="contacts">
-              <!-- Where new contacts will be appended -->
-            </ul>
-            <div class="col-md-6">
-              <div id="show-contact">
-                <h2></h2>
+          <h2>Contacts:</h2>
+          <ul id="contacts">
+            <!-- Where new contacts will be appended -->
+          </ul>
+        </div>
+        <div class="col-lg-6">
+          <div id="show-contact">
+            <h2></h2>
 
-                <p>First name: <span class="first-name"></span></p>
-                <p>Last name: <span class="last-name"></span></p>
-              </div>
-            </div>
+            <p>First name: <span class="first-name"></span></p>
+            <p>Last name: <span class="last-name"></span></p>
+          </div>
         </div>
       </div>
     </div>
