--- a/index.html
+++ b/index.html
@@ -1,46 +1,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
+    <title>Title</title>
   </head>
   <body>
     <div class="container">
+      <h1>Address book</h1>
+
       <div class="row">
-        <div class="col-lg-12">
-          <div class="jumbotron">
-            <h1>Address Book v1.01</h1>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <form id="new-contact-info">
-            <h2>Add a contact:</h2>
+        <div class="col-md-6">
+          <h2>Add a contact:</h2>
+          <form id="new-contact">
             <div class="form-group">
-              <label for="new-first-name">First Name</label>
-              <input type="text" class="form-control" id="new-first-name" />
+              <label for="new-first-name">First name</label>
+              <input type="text" class="form-control" id="new-first-name">
             </div>
             <div class="form-group">
-              <label for="new-last-name">Last Name</label>
-              <input type="text" class="form-control" id="new-last-name" />
+              <label for="new-last-name">Last name</label>
+              <input type="text" class="form-control" id="new-last-name">
             </div>
 
-            <button type="submit" class="btn btn-success btn-lg">Add</button>
+            <div id='new-addresses'>
+              <div class="new-address">
+                <div class="form-group">
+                  <label>Type</label>
+                  <select class="form-control" id="address-type">
+                    <option value="Residential">Residential</option>
+                    <option value="Business">Business</option>
+                    <option value="Vacation">Vacation</option>
+                    <option value="P.O. Box">P.O. Box</option>
+                    <option value="Super Secret Lab">Super Secret Lab</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="new-street">Street</label>
+                  <input type="text" class="form-control new-street">
+                </div>
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input type="text" class="form-control new-city">
+                </div>
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input type="text" class="form-control new-state">
+                </div>
+              </div>
+            </div>
+
+            <span class="btn btn-primary" id="add-address">Another Address</span>
+
+            <button type="submit" class="btn">Add</button>
           </form>
+
           <h2>Contacts:</h2>
           <ul id="contacts">
-            <!-- Where new contacts will be appended -->
+
           </ul>
         </div>
-        <div class="col-lg-6">
+        <div class="col-md-6">
           <div id="show-contact">
             <h2></h2>
 
             <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
+            <p>Address: </p>
+            <ul id="addresses">
+
+            </ul>
           </div>
         </div>
       </div>
